# Embeddings4Disease

./: .gitignore  README.md  pyproject.toml  requirements.txt
config_examples/backbone/train/: README.md  config_bert.yaml  config_bert_with_nsp.yaml  config_convbert.yaml  config_deberta.yaml  config_fnet.yaml  config_funnel.yaml  config_mobilebert.yaml  config_roberta.yaml  config_roformer.yaml  config_xlmroberta.yaml
config_examples/backbone/validate/: README.md  config.yaml  config_backbone.yaml  config_baseline.yaml
config_examples/head/train/: config_encoderdecoder.yaml  config_multilabel.yaml
config_examples/head/validate/: config_baseline.yaml  config_multilabel.yaml  config_multilabel_head.yaml
config_examples/preprocess/: README.md  config_mlm_mimic.yaml  config_nsp_mimic.yaml  config_secret_dataset.yaml  config_seq2seq_mimic.yaml
config_examples/preprocessing/: README.md  config_mimic.yaml
config_examples/training/: README.md  config.yaml  config_fnet.yaml  config_funnel.yaml  config_mobilebert.yaml
config_examples/validate/: config.yaml
config_examples/validation/: README.md  config.yaml  config_baseline.yaml
src/callbacks/: callbacks.py
src/cli/: preprocessing.py  training.py  validation.py
src/data/: collators.py  datasets.py
src/data/preprocessing/: abstract_factory.py  preprocessor_factory.py
src/embeddings4disease/backbone/factories/: abstract_factory.py  backbone_factory.py
src/embeddings4disease/callbacks/: callbacks.py  custom_callbacks.py  hf_callbacks.py
src/embeddings4disease/cli/: preprocess.py  preprocess_mlm.py  preprocess_nsp.py  preprocessing.py  train_backbone.py  train_encoderdecoder_head.py  train_multilabel_head.py  training.py  validate_backbone.py  validate_baseline.py  validate_multilabel_head.py  validation.py
src/embeddings4disease/cli/backbone/train/: train_backbone.py
src/embeddings4disease/cli/backbone/validate/: validate_backbone.py
src/embeddings4disease/cli/head/train/: train_encoderdecoder_head.py
src/embeddings4disease/cli/head/validate/: validate_baseline.py  validate_multilabel_head.py
src/embeddings4disease/cli/preprocess/: preprocess_nsp.py  preprocess_seq2seq.py
src/embeddings4disease/data/: collators.py  datasets.py
src/embeddings4disease/factories/: abstract_factory.py  architecture_factory.py
src/embeddings4disease/head/architectures/: multilabel_head.py
src/embeddings4disease/head/factories/: abstract_factory.py  head_factory.py
src/embeddings4disease/metrics/: backbone_metrics.py  head_metrics.py  metrics.py  multilabel_head_metrics.py
src/embeddings4disease/preprocessing/: abstract_factory.py  preprocessor_factory.py
src/embeddings4disease/trainer/: __init__.py  trainer.py  training_args.py  training_state.py
src/embeddings4disease/utils/: utils.py
src/factories/: README.md  abstract_factory.py  architecture_factory.py  test.py
src/metrics/: metrics.py
src/utils/: utils.py
tests/head/architectures/: multilabel_head.py
tests/test_utils/: test_custom_ordered_set.py
